--- a/bower.json
+++ b/bower.json
@@ -12,5 +12,9 @@
     "bower_components",
     "test",
     "tests"
-  ]
+  ],
+  "dependencies": {
+    "jQuery": "~2.1.4",
+    "normalize.css": "~3.0.3"
+  }
 }
