--- a/package.json
+++ b/package.json
@@ -21,6 +21,9 @@
   },
   "homepage": "https://github.com/pope410211/pope410211.github.io",
   "devDependencies": {
+    "browser-sync": "^2.7.12",
+    "gulp": "^3.9.0",
+    "gulp-sass": "^2.0.1",
     "node-sass": "^3.2.0",
     "wiredep": "^2.2.2"
   }
