--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "start": "browser-sync start --server --files='index.html, css/*.css, js/*.js'",
     "bower:install": "bower install --save",
     "postbower:install": "wiredep --s src/index.html",
-    "sass": "node-sass src/scss/main.scss -o src/css/"
+    "sass": "node-sass scss/main.scss -o css/"
   },
   "repository": {
     "type": "git",
