--- a/bower.json
+++ b/bower.json
@@ -1,5 +1,7 @@
 {
   "name": "pope410211-github-io",
   "version": "0.0.0",
-  "dependencies": {}
+  "dependencies": {
+    "jQuery": "~2.1.4"
+  }
 }
