--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,4 @@
-node_modules
-.editorconfig
-.gitattributes
-.htaccess
-.yo-rc.json
-src/css/main.css
-src/css/normalize.css
-bower_components
 _site
+.sass-cache
+bower_components
+.npmignore
