--- a/_config.yml
+++ b/_config.yml
@@ -1,13 +1,16 @@
 # Site settings
 title: Nicholas Pope - The Most Hospitable Developer
 email: pope410211@gmail.com
-description: > # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
-url: "pope410211.github.io" 
-twitter_username: @pope410211
+description:
+phone: 623-340-2499
+url: "pope410211.github.io"
+twitter_username: pope410211
 github_username:  pope410211
 
-# Build settings
-markdown: kramdown
+# Markdown library
+markdown: redcarpet
+# Markdown library options
+redcarpet:
+  extensions: ['no_intra_emphasis', 'tables', 'fenced_code_blocks', 'autolink', 'smart',
+              'strikethrough', 'superscript', 'underline', 'highlight', 'footnotes']
+highlighter: true
