--- a/_config.yml
+++ b/_config.yml
@@ -8,9 +8,4 @@ twitter_username: pope410211
 github_username:  pope410211
 
 # Markdown library
-markdown: redcarpet
-# Markdown library options
-redcarpet:
-  extensions: ['no_intra_emphasis', 'tables', 'fenced_code_blocks', 'autolink', 'smart',
-              'strikethrough', 'superscript', 'underline', 'highlight', 'footnotes']
-highlighter: true
+markdown: kramdown
