--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@ title: Nicholas Pope - The Most Hospitable Developer
 email: pope410211@gmail.com
 description:
 phone: 623-340-2499
-baseurl: "/pope410211.github.io"
+baseurl: "pope410211.github.io"
 url: "pope410211.github.io"
 twitter_username: pope410211
 github_username:  pope410211
