writing a blog post

--- a/_config.yml
+++ b/_config.yml
@@ -11,7 +11,7 @@ github_username:  pope410211
 # Markdown library
 markdown:   Redcarpet
 
-# Author details.
+# Author details
 Nick_Pope:
     name: Nick Pope
     email: pope410211@gmail.com
